# svs-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml  prompts.ron
docs/rationale/: 0001_headless-cli-architecture.md
scripts/: render-fast.sh  render.sh  version-bump.sh  version-tag.sh
src/: adapters.rs  audio.rs  cli.rs  config.rs  ffmpeg.rs  gemini.rs  main.rs  models.rs  pdf.rs  pipeline.rs  util.rs
